[package]
name = "lcd-ili9341-spi"
description = "Embedded_hal driver for ILI9341 SPI LCD, compatible with Waveshare 2,4 inch board"
authors = ["Maciej Główka <mg@maciejglowka.com>"]
license = "MIT"
repository = "https://github.com/maciekglowka/lcd-ili9341-spi"
version = "0.1.2"
edition = "2021"
readme = "README.md"
publish = true
keywords = ["embedded", "driver", "display", "waveshare"]
categories = ["embedded", "hardware-support", "no-std::no-alloc"]

[lib]
doctest = false

[features]
text = []

[dependencies]
embedded-hal = "1.0"

